style.css
/* ... */
/* Navbar */
.navbar {
  background-color: var(--white-color);
  color: var(--primary-color);
  padding: 1rem 0;
  width: 100%;
}

.navbar-container {
  display: flex;
  justify-content: space-between;
}

.navbar-brand {
  font-size: 20px;
  user-select: none;
}

.logo span {
  color: var(--secondary-color);
}

.navbar-right {
  display: block;
  position: fixed;
  padding: 5rem;
  background: rgba(236, 82, 66, 0.7);
  backdrop-filter: blur(0.1rem);
  inset: 0 0 0 0%;
  transform: translateX(100%);
  transition: transform 0.4s;
  z-index: 100;
}

.navbar-nav {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.navbar-nav li:hover {
  color: var(--gray-color);
}

.nav-btn {
  border: 2px solid var(--primary-color);
  padding: 0.5rem 1rem;
  color: var(--primary-color);
  transition: all 0.2s ease-in-out;
}

.nav-btn:hover {
  background-color: transparent;
  color: var(--white-color);
  border: 2px solid var(--white-color);
}

.show-menu {
  transform: translateX(0);
}

/* sticky action from js */
nav.sticky {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
}

/* menu button css */
.menu-btn {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 25px;
  height: 25px;
  cursor: pointer;
  transition: all 0.5s ease-in-out;
  z-index: 999;
}

.menu-btn__burger {
  width: 20px;
  height: 2px;
  background-color: var(--primary-color);
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
  transition: all 0.5s ease-in-out;
}

.menu-btn__burger::before,
.menu-btn__burger::after {
  content: '';
  position: absolute;
  width: 20px;
  height: 2px;
  background-color: var(--primary-color);
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
  transition: all 0.5s ease-in-out;
}

.menu-btn__burger::before {
  transform: translateY(-6px);
}

.menu-btn__burger::after {
  transform: translateY(6px);
}

/* nav menu animation */
.menu-btn.open .menu-btn__burger {
  transform: translateX(-20px);
  background: transparent;
  box-shadow: none;
}

.menu-btn.open .menu-btn__burger::before {
  transform: translate(20px, 0) rotate(45deg);
}

.menu-btn.open .menu-btn__burger::after {
  transform: translate(20px, 0) rotate(-45deg);
}

.main {
  overflow-y: scroll;
}

/* ============== hero section ============ */
.hero {
  background-image: url("img/img-2.jpg");
  background-size: cover;
  background-position: center;
}

.overlay {
  background-color: rgb(255, 255, 255, 0.7);
}

.hero-bg {
  background-image: url("img/herobackg-1.png");
  background-position: center;
  background-size: cover;
  padding: 5rem 0;
}

.hero-content .hero-welcome-text {
  color: var(--secondary-color);
  font-weight: 400;
  margin-bottom: 0.5rem;
}

.hero-content h1 {
  color: var(--secondary-color);
  font-weight: 900;
  font-size: 36px;
  line-height: 1;
  margin-bottom: 1rem;
}

.hero-content p {
  color: var(--paragraph-color);
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 0.5rem;
  padding: 0.5rem;
  background-color: rgb(255, 255, 255, 0.7);
  border: 2px solid var(--white-color);
  max-width: 40rem;
}

.hero-content .hero-time {
  color: var(--primary-color);
  font-weight: 900;
  font-size: 30px;
}

.hero-content .hero-venue {
  font-size: 14px;
  font-weight: 500;
}

/* ======== Program css =========== */
.program {
  background-color: var(--primary-color);
  color: var(--white-color);
  padding: 1rem 0;
  overflow: hidden;
}

.program-content {
  padding: 2rem 0;
  position: relative;
}

.section-title {
  text-align: center;
  margin-bottom: 2rem;
  font-weight: 500;
  position: relative;
  padding: 1rem;
  padding-bottom: 1.5rem;
}

.section-title::before {
  content: '';
  position: absolute;
  bottom: 0;
  width: 50px;
  right: 45%;
  height: 1px;
  background-color: var(--secondary-color);
  margin-bottom: 1rem;
}

.program-list {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 1rem;
}

.program-item {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  background-color: var(--soft-black);
  border: 1px solid var(--soft-black);
  transition: all 0.3s ease-in-out;
}

.program-item:hover {
  border: 1px solid var(--white-color);
}

.program-item .program-item-img {
  width: auto;
  height: auto;
  overflow: hidden;
}

.program-img {
  max-width: 50px;
}

.program-item .program-item-text {
  padding: 0 0.5rem;
  width: 50%;
}

.program-item h3 {
  font-size: 16px;
  color: var(--secondary-color);
}

.feature-item-text p {
  font-size: 12px;
  font-weight: 700;
  max-width: 20rem;
}

.program-item .program-item-text p {
  font-size: 14px;
}

.program-cta {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 2rem;
}

.program-btn-b {
  text-decoration: underline;
  display: none;
  transition: color 0.3s ease-in-out;
}

.program-btn-b:hover {
  color: var(--secondary-color);
}

.program-btn {
  color: var(--white-color);
  background-color: var(--secondary-color);
  padding: 1.5rem 2rem;
  border: 1px solid var(--secondary-color);
  transition: all 0.2s ease-in-out;
}

.program-btn:hover {
  background-color: transparent;
  color: var(--secondary-color);
}

/* =========== Feature section css =========== */
.feature-content {
  padding: 2rem 0;
}

.feature-list {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
  gap: 2rem;
  overflow: hidden;
  height: 510px;
}

.hide {
  height: auto;
}

.feature-item {
  display: flex;
  gap: 1rem;
  padding: 0.5rem 1rem;
}

.feature-item .feature-item-img {
  width: 100px;
  overflow: hidden;
}

.feature-item .feature-item-img img {
  width: 100%;
  position: relative;
}

.feature-item .feature-item-img img::after {
  content: '';
  position: absolute;
  width: 100px;
  height: 100px;
  background-color: var(--secondary-color);
}
/* ... */

